--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(242, 242, 242);
 }
 
 canvas {
