--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  /* display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; */
+  height: 100vh;
   background-color: rgb(242, 242, 242);
 }
 
