--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,3 +45,15 @@ canvas {
     font-size: 20px;
   }
 }
+
+@media (orientation: portrait) {
+  .portrait {
+    transform: rotate(-90deg);
+    transform-origin: top left;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100vh;
+    height: 100vw;
+  }
+}
