--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,13 @@ canvas {
   .menu-item {
     height: 40px;
   }
+  .portrait {
+    width: 100vh; /* 뷰포트의 높이를 기반으로 너비 설정 */
+    height: 100vw; /* 뷰포트의 너비를 기반으로 높이 설정 */
+    transform-origin: center center; /* 회전의 중심점을 설정 */
+    transform: rotate(-90deg); /* -90도 회전하고 x축으로 이동 */
+    /* overflow-y: scroll; 필요한 경우 스크롤 허용 */
+  }
 }
 @media (min-width: 801px) {
   .title {
@@ -46,7 +53,7 @@ canvas {
   }
 }
 
-@media (orientation: portrait) {
+/* @media (orientation: portrait) {
   .portrait {
     transform: rotate(-90deg);
     transform-origin: top left;
@@ -56,4 +63,4 @@ canvas {
     width: 100vh;
     height: 100vw;
   }
-}
+} */
