--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,17 @@ canvas {
   /* color: rgb(0, 214, 142); */
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 @media (max-width: 800px) {
   .title {
     font-size: 30px;
